# openclaw-usdc-clawinvoice

./: .env.example  .gitignore  README.md  pyproject.toml
clawinvoice/: __init__.py  cli.py  config.py  ledger.py  verify.py
docs/: demo.md  rules.md  submission.md  voting.md
scripts/: demo.sh
skills/clawinvoice/: README.md  SKILL.md  examples.md
tests/: test_smoke.py  test_verify.py
